<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewMethodDistanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/methodDistanceTitle"
                android:textSize="25sp"
                android:paddingBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMethodDistance1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistance1"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/textViewMethodDistance2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistance2"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_coast" />

            <TextView
                android:id="@+id/textViewMethodDistance3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodDistance3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/imageViewMethodDistance1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_coast" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/imageViewMethodDistance2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:srcCompat="@drawable/ic_light"
                    android:paddingTop="5dp"/>

                <TextView
                    android:id="@+id/textViewMethodDistance4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/methodDistance4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>